# pandas_db_loader

./: README.md  pyproject.toml  test_load.py
examples/: readme.py
pandas_loader/: gen.py  load.py  models.py  util.py
pandasdb/: core.py  expr.py  models.py
tests/: test_load.py  test_load_mult_pk.py
