[tool.poetry]
name = "pandas_db_loader"
version = "0.1.0"
description = ""
authors = ["Andre Muench <andre.muench@statworx.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"
SQLAlchemy = "1.4.15"

[tool.poetry.dev-dependencies]
pymssql = "2.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
