[tool.poetry]
name = "pandas_loader"
version = "0.1.0"
description = ""
license = "MIT"
readme = "README.md"
authors = ["Andre Muench <andre.muench@statworx.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1"
pandas = "^1.1.0"
SQLAlchemy = "1.3.19"
ctds = "^1.14.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
pymssql = "2.1.5"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
